apps/web/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n

    spec:
      containers:
      - name: n8n
        # https://hub.docker.com/r/n8nio/n8n
        image: docker.n8n.io/n8nio/n8n:2.4.5
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        ports:
        - containerPort: 5678
        volumeMounts:
        - name: config
          mountPath: /home/node/.n8n
      volumes:
      - name: config
        hostPath:
          path: /mnt/kubernetes-data/n8n-config # This path contains the same files on all nodes 
          type: DirectoryOrCreate
