apps/web/n8n/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: web
  name: n8n
spec:
  entryPoints:
    - web
  routes:
    - match: ingress-route-match
      kind: Rule
      services:
        - name: n8n
          port: 80
